@@ -8,6 +8,8 @@ Revision history for DBIx::Class
     * Fixes
         - Ensure failing on_connect* / on_disconnect* are dealt with properly,
           notably on_connect* failures now properly abort the entire connect
+        - Fix corner case of stringify-only overloaded objects being used in
+          create()/populate()
 
     * Misc
         - Skip tests in a way more intelligent and speedy manner when optional
